--- a/frontend/src/app/model/model.component.html
+++ b/frontend/src/app/model/model.component.html
@@ -5,8 +5,12 @@
       <span (click)="hide()" >X</span>
     </div>
     <div class="model__inputbox">
-      <form method="GET">
-        <input type="text" placeholder="Start your question with &quot;What&quot;, &quot;How&quot;, &quot;Why&quot;, etc.">
+      <form #userForm= "ngForm" (ngSubmit)="onSubmit()">
+       {{userForm.value |json }}
+  <br>
+  {{userModel | json }}
+   <input type="text" name="question" [(ngModel)]="userModel.question" placeholder="Start your question with &quot;What&quot;, &quot;How&quot;, &quot;Why&quot;, etc.">
+        <button type="submit">submit</button>
       </form>
     </div>
     <div class="model__bottom">
