--- a/frontend/src/app/model/model.component.html
+++ b/frontend/src/app/model/model.component.html
@@ -6,32 +6,17 @@
     </div>
     <div class="model__inputbox">
       <form #userForm= "ngForm" (ngSubmit)="onSubmit()">
-       {{userForm.value |json }}
+      
   <br>
-  {{userModel | json }}
   
    <input type="text" name="question" [(ngModel)]="userModel.question" placeholder="Start your question with &quot;What&quot;, &quot;How&quot;, &quot;Why&quot;, etc.">
         <button type="submit">submit</button>
       </form>
     </div>
+     {{response}}
     <div class="model__bottom">
       <a class="model__bottom__cancel" (click)="hide()">Cancel</a>
       <a class="model__bottom__add">Add Question</a>
     </div>
   </div>
 </div>
-
-
-<!--var model = $('.model_container');-->
-<!--var backdrop = $('.backdrop');-->
-<!--var body = $('body');-->
-<!--function openModel(e) {-->
-<!--model.fadeIn(200);-->
-<!--backdrop.show();-->
-<!--body.css('overflow','hidden');-->
-<!--}-->
-<!--function closeModel(e) {-->
-<!--model.hide();-->
-<!--backdrop.fadeOut(500);-->
-<!--body.css('overflow','scroll');-->
-<!--}-->
