--- a/frontend/src/app/feed/feed-item/feed-item.component.html
+++ b/frontend/src/app/feed/feed-item/feed-item.component.html
@@ -1,6 +1,6 @@
 <li>
-  <div class="addQueProfileView"><img src="assets/img/test.png" alt="Profile Pic">
-    <div><h3 class="quePostedUsrName">{{ data.usrName }}</h3>
+  <div class="addQueProfileView"><img src="https://avatars0.githubusercontent.com/u/32728998?s=460&v=4" alt="">
+    <div><h3 class="quePostedUsrName">{{ "Aman" }}</h3>
       <p>{{ data.time }}</p></div>
   </div>
   <h1 class="queTitle" (click)="openAnswerView()">{{ data.question }}</h1>
