--- a/frontend/src/app/feed/feed.component.html
+++ b/frontend/src/app/feed/feed.component.html
@@ -1,8 +1,8 @@
 <ul class="section__main__listView" id="listView">
 
   <li (click)="openModel()">
-    <div class="addQueProfileView"><img src="assets/img/test.png" alt="Profile Pic">
-      <h3>UserName</h3></div>
+    <div class="addQueProfileView"><img src="https://avatars0.githubusercontent.com/u/32728998?s=460&v=4" alt="">
+      <h3>Anil</h3></div>
     <h1>What is your question?</h1>
   </li>
 
