--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -50,7 +50,7 @@
     </div>
     <div class="header__profileView">
       <a>
-        <img src="assets/img/test.png" alt="Profile Pic"> </a>
+        <img src="" alt="Profile Pic"> </a>
     </div>
     <div class="header__que_btn">
       <a role="button" class="ripple" (click)="openModel()">Add Question</a>
